--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.105",
@@ -24,8 +23,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.77.8",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +50,12 @@
     ]
   },
   "devDependencies": {
-    "@types/babel__core": "^7.20.5"
+    "@testing-library/react": "^16.0.1",
+    "@types/babel__core": "^7.20.5",
+    "cypress": "^13.15.2",
+    "fetch-mock": "^12.0.2",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.3.1",
+    "redux-mock-store": "^1.5.5"
   }
 }
