--- a/.github/react-burger.yml
+++ b/.github/react-burger.yml
@@ -1,4 +1,4 @@
-name: eact-burger
+name: react-burger
 
 on:
   push:
@@ -70,7 +70,7 @@ on:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd kkaloreact-burger
+            cd react-burger
             # Выполняет pull образов с Docker Hub
             sudo docker compose -f docker-compose.production.yml pull
             # Перезапускает все контейнеры в Docker Compose
