--- a/.github/workflows/react-burger.yml
+++ b/.github/workflows/react-burger.yml
@@ -7,51 +7,51 @@ on:
 
 jobs:
 
-  build_and_push_frontend_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/react_burger_frontend:latest
+  # build_and_push_frontend_to_docker_hub:
+  #   name: Push frontend Docker image to DockerHub
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
+  #     - name: Login to Docker
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Push to DockerHub
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: ./frontend/
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USERNAME }}/react_burger_frontend:latest
 
-  build_and_push_gateway_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./gateway/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/react_burger_gateway:latest
+  # build_and_push_gateway_to_docker_hub:
+    # name: Push gateway Docker image to DockerHub
+    # runs-on: ubuntu-latest
+    # steps:
+    #   - name: Check out the repo
+    #     uses: actions/checkout@v3
+    #   - name: Set up Docker Buildx
+    #     uses: docker/setup-buildx-action@v2
+    #   - name: Login to Docker
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKER_USERNAME }}
+    #       password: ${{ secrets.DOCKER_PASSWORD }}
+    #   - name: Push to DockerHub
+    #     uses: docker/build-push-action@v4
+    #     with:
+    #       context: ./gateway/
+    #       push: true
+    #       tags: ${{ secrets.DOCKER_USERNAME }}/react_burger_gateway:latest
 
   deploy:
     runs-on: ubuntu-latest
-    needs:
-      - build_and_push_frontend_to_docker_hub
-      - build_and_push_gateway_to_docker_hub
+    # needs:
+    #   - build_and_push_frontend_to_docker_hub
+    #   - build_and_push_gateway_to_docker_hub
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.HOST_PASSWORD }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "docker-compose.yml"
           target: "react-burger"
       - name: Executing remote ssh commands to deploy
@@ -70,7 +70,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.HOST_PASSWORD }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd react-burger
             # Выполняет pull образов с Docker Hub
