--- a/.github/workflows/react-burger.yml
+++ b/.github/workflows/react-burger.yml
@@ -69,8 +69,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          password: ${{ secrets.HOST_PASSWORD }}
           script: |
             cd react-burger
             # Выполняет pull образов с Docker Hub
