--- a/.github/workflows/react-burger.yml
+++ b/.github/workflows/react-burger.yml
@@ -62,7 +62,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          password: ${{ secrets.HOST_PASSWORD }}
+          # password: ${{ secrets.HOST_PASSWORD }}
           source: "docker-compose.yml"
           target: "react-burger"
       - name: Executing remote ssh commands to deploy
@@ -72,14 +72,14 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          password: ${{ secrets.HOST_PASSWORD }}
+          # password: ${{ secrets.HOST_PASSWORD }}
           script: |
             cd react-burger
             # Выполняет pull образов с Docker Hub
-            sudo docker compose -f docker-compose.production.yml pull
+            sudo docker compose -f docker-compose.yml pull
             # Перезапускает все контейнеры в Docker Compose
-            sudo docker compose -f docker-compose.production.yml down
-            sudo docker compose -f docker-compose.production.yml up -d
+            sudo docker compose -f docker-compose.yml down
+            sudo docker compose -f docker-compose.yml up -d
 
   send_message:
     runs-on: ubuntu-latest
