--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     container_name: stellar_burgers_gateway
     image: kaleontyev/stellar_burgers_gateway
     depends_on:
-      - stellar_burgers_frontend
+      - frontend
     ports:
       - 7000:80
     volumes:
